Feat: added get audience count by filter
